testsuite/tests/rep-poly/T20113.stderr

T20113.hs:4:35: error:
    The first pattern in the equation for ‘$sel:y_fld:MkY’
    does not have a fixed runtime representation.
    Its type is:
      Y a :: TYPE rep
